Bring up to version 1.8.17, and change the previous binary bootstrap (which I disliked) to a new C bootstrap.
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@10990 aed309b6-a8cd-e111-996c-001c23d10e55

--- a/lang/objc/Makefile
+++ b/lang/objc/Makefile
@@ -1,32 +1,41 @@
 # New ports collection makefile for:    objc compiler
-# Version required:     1.6.8
-# Date created:         16 October 1997
+# Version required:     1.8.17
+# Date created:         14 May 1998
 # Whom:                 chuckr@freebsd.org
 #
-# $Id: Makefile,v 1.4 1997/03/25 10:33:59 obrien Exp $
+# $Id: Makefile,v 1.5 1997/10/17 21:39:59 chuckr Exp $
 #
 
-
-DISTNAME=       objc1.6.8
-PKGNAME=	objc-1.6.8
+DISTNAME=       objc-1.8.17
 CATEGORIES=     lang
 MASTER_SITES=   http://www.can.nl/~stes/Software/
-DISTFILES=	objc1.6.8.tar.gz objc1.6.8-i386-unknown-freebsd-static.tar.gz
+DISTFILES=	objc-1.8.17.tar.gz bootstrap-1.8.17.tar.gz
 
 MAINTAINER=     chuckr@freebsd.org
 
 HAS_CONFIGURE=	yes
-MAN1=		objc.1 objc1.1 objcpls1.1 postlink.1
-MAN3=		AsciiFiler.3 Block.3 CAObject.3 Collection.3 \
-		Complex.3 Dictionary.3 Float.3 Fraction.3 Integer.3 \
-		IntegerModp.3 Matrix.3 Monomial.3 Object.3 Polynomial.3 \
-		Sequence.3 Set.3 String.3 Symbol.3 Term.3 Tree.3 Vector.3
+MAN1=		cvtimport.1 objc.1 postlink.1
+MAN3=		AsciiFiler.3 Array.3 CAObject.3 Bag.3 Block.3 Complex.3 \
+		Cltn.3 Dictionary.3 Float.3 Fraction.3 IdArray.3 IntArray.3 \
+		Integer.3 IntegerModp.3 Matrix.3 Monomial.3 Object.3 \
+		OrdCltn.3 Point.3 Polynomial.3 Rectangle.3 Sequence.3 Set.3 \
+		SortCltn.3 Stack.3 String.3 Symbol.3 Term.3 Vector.3
 
-post-extract:
-	$(CP) -R $(WRKDIR)/objc1.6.8-i386-unknown-freebsd-static/bin $(WRKSRC)
+BUILD_DEPENDS=	$(PREFIX)/lib/libgc.a:$(PORTSDIR)/devel/boehm-gc
 
-ALL_TARGET=	default
-MAKE_ENV=	env "OBJCDIR=${WRKSRC}" OBJCC=$(WRKSRC)/bin/objc CFLAGS=-O
-CONFIGURE_ENV=	OBJCC="env OBJCDIR=$(WRKSRC) $(WRKSRC)/bin/objc -q -g -noI -noLibs" CFLAGS=-O
+ALL_TARGET=	default cakit objcplus bootstrap
+MAKE_ENV=	PATH=$(WRKDIR)/bootstrap/bin:$(PATH)
+CONFIGURE_ENV=	PATH=$(WRKDIR)/bootstrap/bin:$(PATH)
+CONFIGURE_ARGS=	--prefix=$(PREFIX) --gcprefix=$(PREFIX)
+
+pre-configure:
+	(cd $(WRKDIR)/bootstrap;configure --prefix=$(WRKDIR)/bootstrap --gcprefix=$(PREFIX);$(MKDIR) $(WRKDIR)/bootstrap/bin;make default install)
+
+post-build:
+	(cd $(WRKSRC); env PATH=$(WRKDIR)/bootstrap/bin:$(PATH) OBJCDIR=$(WRKSRC) ./moreLibs -boehm)
+
+post-install:
+	$(MKDIR) $(PREFIX)/share/doc/objc
+	$(INSTALL_DATA) $(WRKSRC)/manual.html $(PREFIX)/share/doc/objc
 
 .include <bsd.port.mk>
