--- a/japanese/k10/Makefile
+++ b/japanese/k10/Makefile
@@ -3,7 +3,7 @@
 # Date created:		25 Feb 1998
 # Whom: Eiji-usagi-MATSUmoto <usagi@ruby.club.or.jp>
 #
-# $Id$
+# $Id: Makefile,v 1.1.1.1 1998/03/12 15:42:39 itojun Exp $
 #
 
 DISTNAME=	knj10-1.00
@@ -11,7 +11,7 @@ PKGNAME=	ja-naga10-1.0
 CATEGORIES=	japanese x11
 MASTER_SITES=	http://gondow-www.cs.titech.ac.jp/~snagao/fonts/
 
-MAINTAINER=	usagi@ruby.club.or.jp
+MAINTAINER=	usagi@clave.gr.jp
 
 USE_X11=	yes
 WRKSRC=         ${WRKDIR}/knj10-1.00
