1.  Removed spurious (but commented-out) MAN6 entry -- though this does     nothing (it was commented out), it could be confusing for people reading     the Makefile.  (must've been real tired when I send-pr'd this one...) 2.  Changed my e-mail address to my swank new @FreeBSD.ORG one. :)
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@10997 aed309b6-a8cd-e111-996c-001c23d10e55

--- a/games/tank/Makefile
+++ b/games/tank/Makefile
@@ -3,7 +3,7 @@
 # Date created:         4 Mar 1998
 # Whom:                 Donald Burr <dburr@POBoxes.com>
 #
-# $Id$
+# $Id: Makefile,v 1.1.1.1 1998/03/14 11:41:22 jkh Exp $
 #
 
 DISTNAME=	tank-0.4a-src
@@ -11,7 +11,7 @@ PKGNAME=	tank-0.4a
 CATEGORIES=	games
 MASTER_SITES=	http://www.info.polymtl.ca/~coyote/tank/
 
-MAINTAINER=	dburr@POBoxes.com
+MAINTAINER=	dburr@FreeBSD.ORG
 
 LIB_DEPENDS=	MesaGL\\.13\\.:${PORTSDIR}/graphics/Mesa
 
@@ -19,8 +19,6 @@ WRKSRC=		${WRKDIR}/${PKGNAME}
 
 USE_GMAKE=	YES
 ALL_TARGET=	linux-mesa-elf
-
-# MAN6=		xmame.6
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/tank ${PREFIX}/bin
