--- a/shells/bash2/Makefile
+++ b/shells/bash2/Makefile
@@ -3,13 +3,13 @@
 # Date created:		21 August 1994
 # Whom:			jkh
 #
-# $Id: Makefile,v 1.27 1997/11/06 01:17:50 ache Exp $
+# $Id: Makefile,v 1.28 1998/04/28 05:09:46 ache Exp $
 #
 
 DISTNAME=       bash-2.02
 CATEGORIES=	shells
-MASTER_SITES=	ftp://slc2.ins.cwru.edu/pub/dist/  \
-		${MASTER_SITE_GNU}
+MASTER_SITES=   ${MASTER_SITE_GNU} \
+		ftp://slc2.ins.cwru.edu/pub/dist/
 .if !defined(NOPORTDOCS)
 DISTFILES=      bash-2.02.tar.gz bash-doc-2.02.tar.gz
 .endif
