--- a/x11-toolkits/gtk13/Makefile
+++ b/x11-toolkits/gtk13/Makefile
@@ -1,13 +1,13 @@
 # New ports collection makefile for:   gtk
-# Version required:		1.0.1
+# Version required:		1.0.2
 # Date Created:			28 Sep 1997
 # Whom:				Vanilla I. Shu <vanilla@MinJe.com.TW>
 #
-# $Id: Makefile,v 1.15 1998/04/17 13:21:17 erich Exp $
+# $Id: Makefile,v 1.16 1998/05/06 09:46:24 vanilla Exp $
 #
 
-DISTNAME=      gtk+-1.0.1
-PKGNAME=       gtk-1.0.1
+DISTNAME=      gtk+-1.0.2
+PKGNAME=       gtk-1.0.2
 CATEGORIES=    x11
 MASTER_SITES=  ftp://ftp.gimp.org/pub/gtk/v1.0/
 
@@ -18,6 +18,8 @@ USE_GMAKE=     yes
 USE_X11=       yes
 
 CONFIGURE_ENV= INSTALL='/usr/bin/install -c'
+
+MAN1=		gtk-config.1
 
 pre-install:
 	@if [ ! -f ${PREFIX}/info/dir ]; then \
