--- a/print/apsfilter6/Makefile
+++ b/print/apsfilter6/Makefile
@@ -3,16 +3,17 @@
 # Date created: 	Tue Nov 14 18:29:48 MET 1995
 # Whom: 		Andreas Klemm <andreas@klemm.gtn.com>
 #
-# $Id: Makefile,v 1.16 1997/10/09 21:04:33 andreas Exp $
+# $Id: Makefile,v 1.17 1998/05/13 18:43:04 andreas Exp $
 #
 
-DISTNAME=	apsfilter-4.9.4
+DISTNAME=	apsfilter-4.9.5
 CATEGORIES=	print
 MASTER_SITES=	http://www.FreeBSD.ORG/~andreas/download/
 
 MAINTAINER=	andreas@FreeBSD.ORG
 
 RUN_DEPENDS=	gs:${PORTSDIR}/print/ghostscript5 \
+		html2ps:${PORTSDIR}/print/html2ps \
 		transfig:${PORTSDIR}/print/transfig \
 		cjpeg:${PORTSDIR}/graphics/jpeg \
 		anytopnm:${PORTSDIR}/graphics/netpbm
