--- a/devel/libslang/Makefile
+++ b/devel/libslang/Makefile
@@ -3,23 +3,23 @@
 # Date created:         11 July 1996
 # Whom:                 ache
 #
-# $Id: Makefile,v 1.11 1998/02/26 03:41:40 steve Exp $
+# $Id: Makefile,v 1.12 1998/02/26 07:31:51 ache Exp $
 #
 
-DISTNAME=       slang0.99-38
-PKGNAME=        libslang-0.99.38
+DISTNAME=	slang1.2.2
+PKGNAME=	libslang-1.2.2
 CATEGORIES=	devel
-MASTER_SITES=   ftp://ftp.clara.net/pub/unix/Usenet/
+MASTER_SITES=	ftp://space.mit.edu/pub/davis/slang/
 
-MAINTAINER=     ports@FreeBSD.org
+MAINTAINER=	xaa@xaa.iae.nl
 
-GNU_CONFIGURE=  yes
-ALL_TARGET=     all elf
-INSTALL_TARGET= install install-elf
-WRKSRC=         ${WRKDIR}/slang
+GNU_CONFIGURE=	yes
+WRKSRC=		${WRKDIR}/slang
+
+ALL_TARGET=	all elf
+INSTALL_TARGET=	install install-elf
 
 post-install:
-	@rm -f ${PREFIX}/lib/libslang.so.99.3[348]
 	${LDCONFIG} -m ${PREFIX}/lib
 
 .include <bsd.port.mk>
