--- a/news/slrn/Makefile
+++ b/news/slrn/Makefile
@@ -3,17 +3,17 @@
 # Date created:        28 March 1997
 # Whom:                Carey Jones <mcj@acquiesce.org>
 #
-# $Id: Makefile,v 1.7 1998/05/13 05:07:10 mph Exp $
+# $Id: Makefile,v 1.8 1998/05/13 15:25:05 mph Exp $
 #
 
-DISTNAME=	slrn0.9.4.3
-PKGNAME=	slrn-0.9.4.3
+DISTNAME=	slrn0.9.5.2
+PKGNAME=	slrn-0.9.5.2
 CATEGORIES=	news
-MASTER_SITES=	ftp://ftp.clara.net/pub/unix/Usenet/
+MASTER_SITES=	ftp://space.mit.edu/pub/davis/slrn/
 
 MAINTAINER=	xaa@xaa.iae.nl
 
-LIB_DEPENDS=	slang\\.0\\.99[0-9][0-9]:${PORTSDIR}/devel/libslang
+LIB_DEPENDS=	slang\\.1:${PORTSDIR}/devel/libslang
 
 WRKSRC=		${WRKDIR}/slrn
 GNU_CONFIGURE=	yes
