--- a/sysutils/most/Makefile
+++ b/sysutils/most/Makefile
@@ -1,20 +1,20 @@
 # New ports collection makefile for:	most
-# Version required:	4.7
+# Version required:	4.8.1
 # Date created:		31 May 1997
 # Whom:			rhwang@bigpanda.com
 #
-# $Id$
+# $Id: Makefile,v 1.2 1997/06/03 21:52:01 asami Exp $
 #
 
-DISTNAME=	most4.7
-PKGNAME=	most-4.7
+DISTNAME=	most4.8.1
+PKGNAME=	most-4.8.1
 CATEGORIES=	misc	
 MASTER_SITES=	ftp://space.mit.edu/pub/davis/most/ \
 		ftp://ftp.uni-stuttgart.de/pub/unix/misc/slang/most/
 
 MAINTAINER=	rhwang@bigpanda.com
 
-LIB_DEPENDS=	slang\\.0\\.99[0-9][0-9]:${PORTSDIR}/devel/libslang
+LIB_DEPENDS=	slang\\.1:${PORTSDIR}/devel/libslang
 
 GNU_CONFIGURE=	yes
 WRKSRC=		${WRKDIR}/most
