--- a/games/maelstrom/Makefile
+++ b/games/maelstrom/Makefile
@@ -3,15 +3,13 @@
 # Date created:				13 May 1998
 # Whom:					Andrey Zakhvatov
 #
-# $Id$
+# $Id: Makefile,v 1.1.1.1 1998/05/17 05:43:35 mph Exp $
 #
 
 DISTNAME=		Maelstrom-1.4.3-L2.0.6-src
 PKGNAME=		maelstrom-2.0.6
 CATEGORIES=		games x11
-MASTER_SITES=		${MASTER_SITE_SUNSITE} \
-			ftp://ftp.devolution.com/pub/maelstrom/
-MASTER_SITE_SUBDIR=	games/x11/networked
+MASTER_SITES=		ftp://ftp.devolution.com/pub/maelstrom/
 
 MAINTAINER=		andy@icc.surw.chel.su
 
