--- a/x11-wm/afterstep-stable/Makefile
+++ b/x11-wm/afterstep-stable/Makefile
@@ -1,52 +1,71 @@
-# New ports collection makefile for:	afterstep
-# Version required:	1.0
-# Date created:		October 29th 1996
-# Whom:			jfitz@FreeBSD.ORG
+# New ports collection makefile for:	afterstep-1.4.4
+# Version required:	1.4.4
+# Date created:		1 May 1998
+# Whom:			Brett Taylor
 #
-# $Id: Makefile,v 1.18 1997/06/07 02:55:41 jfitz Exp $
+# $Id:$
 #
 
-DISTNAME=	AfterStep-1.0
-PKGNAME=	afterstep-1.0
-CATEGORIES=	x11
-MASTER_SITES=	ftp://afterstep.foo.net/pub/AfterStep/
+DISTNAME=	AfterStep-1.4.5.0
+PKGNAME=	afterstep-1.4.5.3
+CATEGORIES=     x11
+MASTER_SITES=   ftp://ftp.afterstep.org/pub/
+EXTRACT_SUFX=   .tgz
 
-MAINTAINER=	jfitz@FreeBSD.ORG
+PATCH_SITES=    ftp://ftp.afterstep.org/pub/
+PATCHFILES=	AfterStep1450-to-1451.patch.gz AfterStep1451-to-1453.patch.gz
+PATCH_DIST_STRIP=	-p1
 
-LIB_DEPENDS=	Xpm\\.4\\.:${PORTSDIR}/graphics/xpm
+MAINTAINER=	brett@peloton.physics.montana.edu
 
-BROKEN=		repository copy from 1.0, awaiting upgrade to 1.44
+LIB_DEPENDS=    Xpm\\.4\\.:${PORTSDIR}/graphics/xpm
 
-USE_X11=	yes
+NO_PACKAGE=	yes
+#there are 130 files or so with spaces or parens in their name which
+#makes pkg_add die so we can't easily package this
+
+WRKSRC=         ${WRKDIR}/AfterStep
+
+IS_INTERACTIVE=	yes
+USE_IMAKE=	yes
 INSTALL_TARGET=	install install.man
 MANCOMPRESSED=	yes
-MAN1=		afterstep.1 asclock.1 Animate.1 Audio.1 Auto.1 Banner.1 Pager.1 Wharf.1
+
+HAS_CONFIGURE=	yes
+
+XMKMF=		$(X11BASE)/xmkmf
+pre-configure:
+	@${ECHO_MSG} "The interactive portion is asking you about languages"
+	@${ECHO_MSG} "and color use by asclock."
+pre-patch:
+	@${ECHO_MSG} "*******************************************************"
+	@${ECHO_MSG} "The source will be patched to use xv to put non-pixmaps"
+	@${ECHO_MSG} "on the root window using a tiled format.  If you would"
+	@${ECHO_MSG} "prefer a different viewer or the image not to be tiled,"
+	@${ECHO_MSG} "please stop the build now and edit patch-aa to your"
+	@${ECHO_MSG} "preferred configuration."
+	@${ECHO_MSG} "*******************************************************"
 
 pre-build:
-		@ cd ${WRKSRC}; sh MakeMakefiles
+	@ cd ${WRKSRC}; ${MAKE} Makefiles
 
-post-install:	
-		@ ${MKDIR} -p ${PREFIX}/lib/X11/afterstep/backgrounds/
-		${INSTALL_DATA} ${WRKSRC}/backgrounds/* ${PREFIX}/lib/X11/afterstep/backgrounds/
-		@ ${MKDIR} -p ${PREFIX}/lib/X11/afterstep/sounds/
-		${INSTALL_DATA} ${WRKSRC}/sounds/* ${PREFIX}/lib/X11/afterstep/sounds/
-		@ ${MKDIR} -p ${PREFIX}/include/X11/pixmaps/
-.if defined(USE_HICOLOR_ICONS)
-		${INSTALL_DATA} ${WRKSRC}/icons/*.xpm ${PREFIX}/include/X11/pixmaps/
-.else
-.if !defined(BATCH)
-		@echo "===>  Note: to use the hi-color icons,"
-		@echo "      reinstall this port with -DUSE_HICOLOR_ICONS"
-		@echo "      defined"
-.endif
-		@for file in AFstep.xpm penguin.xpm monitor_bsd.xpm; do \
-			${CP} ${FILESDIR}/$$file ${WRKSRC}/icons/8bit; \
-		done
-		${INSTALL_DATA} ${WRKSRC}/icons/8bit/*.xpm ${PREFIX}/include/X11/pixmaps/
-.endif
-		@ ${MKDIR} -p ${PREFIX}/lib/X11/afterstep/doc/
-		@for file in CHANGES CREDITS README README.8bit INSTALL FAQ module-interface.txt; do \
-			${INSTALL_DATA} ${WRKSRC}/$$file ${PREFIX}/lib/X11/afterstep/doc/; \
-		done
+#there's a missing man file for ASSound - touch so we can install without
+#removing the ASSound module and breaking something else
+pre-install:
+	@${TOUCH} ${WRKSRC}/modules/ASSound/ASSound.man
+
+post-install:
+	${INSTALL_SCRIPT} ${WRKSRC}/afterdoc/afterstepdoc ${PREFIX}/bin/
+	${INSTALL_DATA} ${FILESDIR}/monitor_bsd.xpm ${PREFIX}/include/X11/pixmaps/
+	@${RM} ${PREFIX}/share/afterstep/*.orig
+	@${RM} ${PREFIX}/share/afterstep/feels/*.orig
+	@${RM} ${PREFIX}/share/afterstep/looks/*.orig
+	@${RM} ${PREFIX}/share/afterstep/non-configurable/desk*/*.orig
+	@${RM} ${PREFIX}/share/afterstep/non-configurable/tmp/*.orig
+	@${RM} ${PREFIX}/share/afterstep/desktop/icons/*/*.orig
+	@${RM} ${PREFIX}/share/afterstep/desktop/buttons/*.orig
+	@${ECHO_MSG} "********************************************************"
+	@${ECHO_MSG} "HTML docs are included in ${PREFIX}/share/doc/afterstep"
+	@${ECHO_MSG} "********************************************************"
 
 .include <bsd.port.mk>
