$(X11BASE)/xmkmf --> $(X11BASE)/bin/xmkmf
Pointed out by:	Brett Taylor <brett@peloton.physics.montana.edu>
Screwed up by:	mph


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@11111 aed309b6-a8cd-e111-996c-001c23d10e55

--- a/x11-wm/afterstep-stable/Makefile
+++ b/x11-wm/afterstep-stable/Makefile
@@ -3,7 +3,7 @@
 # Date created:		1 May 1998
 # Whom:			Brett Taylor
 #
-# $Id:$
+# $Id: Makefile,v 1.20 1998/05/18 03:23:39 mph Exp $
 #
 
 DISTNAME=	AfterStep-1.4.5.0
@@ -33,7 +33,7 @@ MANCOMPRESSED=	yes
 
 HAS_CONFIGURE=	yes
 
-XMKMF=		$(X11BASE)/xmkmf
+XMKMF=		$(X11BASE)/bin/xmkmf
 pre-configure:
 	@${ECHO_MSG} "The interactive portion is asking you about languages"
 	@${ECHO_MSG} "and color use by asclock."
