Place the titlebar at the top unless, TITLE_BOTTOM is defined.
PR:		6582
Submitted by:	maintainer


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@11130 aed309b6-a8cd-e111-996c-001c23d10e55

--- a/x11-wm/icewm/Makefile
+++ b/x11-wm/icewm/Makefile
@@ -3,7 +3,7 @@
 # Date created:        10 August 1997
 # Whom:                Yukihiro Nakai <Nakai@Mlab.t.u-tokyo.ac.jp>
 #
-# $Id: Makefile,v 1.6 1998/04/28 14:51:48 mph Exp $
+# $Id: Makefile,v 1.7 1998/05/02 21:22:55 vanilla Exp $
 #
 
 DISTNAME=	icewm-0.8.16
@@ -16,6 +16,13 @@ MAINTAINER=	Nakai@technologist.com
 LIB_DEPENDS=	Xpm\\.4\\.:${PORTSDIR}/graphics/xpm
 
 USE_X11=	yes
+
+pre-patch:
+.if defined(TITLE_BOTTOM)
+	${CP} ${FILESDIR}/patch-titlebottom ${PATCHDIR}/patch-ac
+.else
+	${CP} ${FILESDIR}/patch-titletop ${PATCHDIR}/patch-ac
+.endif
 
 post-install:
 	${CP} ${FILESDIR}/bsd-daemon.xpm ${PREFIX}/lib/X11/icewm/taskbar
