--- a/cad/xcircuit/Makefile
+++ b/cad/xcircuit/Makefile
@@ -3,14 +3,14 @@
 # Date created:		3 Apr 1998
 # Whom:			giffunip@asme.org
 #
-# $Id: $
+# $Id: Makefile,v 1.1.1.1 1998/05/18 04:20:21 mph Exp $
 #
 
 DISTNAME=	xcircuit-1.7
 CATEGORIES=	cad x11
 MASTER_SITES=	ftp://bach.ece.jhu.edu/pub/tim/	\
 		${MASTER_SITE_SUNSITE}
-MASTER_SITE_SUBDIR=apps/circuits/
+MASTER_SITE_SUBDIR=apps/circuits
 
 MAINTAINER=     ports@FreeBSD.ORG
 
