upgraded to MH 6.8.4. maintainer changed (-> sanpei@yy.cs.keio.ac.jp)
Submitted by:	sanpei@yy.cs.keio.ac.jp


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@11166 aed309b6-a8cd-e111-996c-001c23d10e55

--- a/japanese/mh/Makefile
+++ b/japanese/mh/Makefile
@@ -1,38 +1,47 @@
 # New ports collection makefile for:	mh (Japanese)
-# Version required:	6.8.3-JP.2c
+# Version required:	6.8.4
 # Date created:		28 March 1995
 # Whom:			Akito FUJITA <fujita@zoo.ncl.omron.co.jp>
 #
-# $Id: Makefile,v 1.9 1997/09/14 21:34:54 max Exp $
+# $Id: Makefile,v 1.10 1997/12/25 22:29:39 asami Exp $
 #
 
 DISTNAME=	mh-6.8.3
-PKGNAME=	ja-mh-6.8.3
-MASTER_SITES=	ftp://omrongw.wg.omron.co.jp/pub/net/mail/
-CATEGORIES=	japanese mail
-DISTFILES=	mh-6.8.3-JP.2c.tar.gz
+PKGNAME=	ja-mh-6.8.4
+CATEGORIES=	japanese
+MASTER_SITES=	ftp://ftp.ics.uci.edu/pub/mh/tar/
+EXTRACT_SUFX=	.tar.Z
 
-MAINTAINER=	ports@FreeBSD.ORG
+PATCH_SITES=	ftp://ftp.ics.uci.edu/pub/mh/updates/ \
+		ftp://jaz.jp.freebsd.org/pub/FreeBSD-jp/ports-jp/LOCAL_PORTS/
+PATCHFILES=	MH.6.8.4.Z \
+		mh-6.8.4-JP-3.00.patch.gz
 
+MAINTAINER=	sanpei@yy.cs.keio.ac.jp
+
+BUILD_DEPENDS=	jless:${PORTSDIR}/japanese/less
 RUN_DEPENDS=	jless:${PORTSDIR}/japanese/less
 
-MAN1=		ali.1 anno.1 burst.1 comp.1 dist.1 folder.1 forw.1 inc.1 \
-		mark.1 mh-chart.1 mh.1 mhl.1 mhook.1 mhmail.1 mhn.1 \
-		mhparam.1 mhpath.1 msgchk.1 msh.1 next.1 packf.1 pick.1 \
-		prev.1 prompter.1 rcvstore.1 refile.1 repl.1 rmf.1 rmm.1 \
-		scan.1 send.1 show.1 slocal.1 sortm.1 vmh.1 whatnow.1 whom.1 \
-		popi.1
-MAN5=		mh-alias.5 mh-format.5 mh-mail.5 mh-profile.5 mh-sequence.5 \
-		mh-tailor.5
-MAN8=		ap.8 conflict.8 dp.8 install-mh.8 post.8 fmtdump.8 popauth.8
+GNU_CONFIGURE=	yes
+CONFIGURE_ARGS=	--enable-batchmode \
+		--enable-apop=${PREFIX}/etc/pop.auth --enable-rpop
 
-do-configure:
-	@sed s%@PREFIX@%${PREFIX}%g ${FILESDIR}/FreeBSD.in \
-	  > ${WRKSRC}/conf/FreeBSD
-	@(cd ${WRKSRC}/conf; make; ./mhconfig FreeBSD)
+MAN1=	ali.1 anno.1 bbc.1 burst.1 comp.1 dist.1 folder.1 forw.1 inc.1 mark.1 \
+	mh-chart.1 mh.1 mhl.1 mhmail.1 mhn.1 mhook.1 mhparam.1 mhpath.1 \
+	msgchk.1 msh.1 next.1 packf.1 pick.1 prev.1 prompter.1 rcvstore.1 \
+	refile.1 repl.1 rmf.1 rmm.1 scan.1 send.1 show.1 slocal.1 sortm.1 \
+	vmh.1 whatnow.1 whom.1
+MAN5=	mh-alias.5 mh-format.5 mh-mail.5 mh-profile.5 mh-sequence.5 mh-tailor.5
+MAN8=	ap.8 conflict.8 dp.8 fmtdump.8 install-mh.8 popauth.8 post.8
 
-pre-build:
-	@(cd ${WRKSRC} ; make clean)
+do-patch:
+	@${GZCAT} ${_DISTDIR}/MH.6.8.4.Z | \
+		${PATCH} -d ${WRKSRC} --forward --quiet -p0
+	@${GZCAT} ${_DISTDIR}/mh-6.8.4-JP-3.00.patch.gz | \
+		${PATCH} -d ${WRKSRC} --forward --quiet -p1
+
+pre-configure:
+	@chmod +x ${WRKSRC}/configure
 
 post-install:
 	${LDCONFIG} -m ${PREFIX}/lib
