Update xvile to version 8. This adds support for PERL scripts but requires perl5. Install the documentation and macros in reasonable places. NOTE: If you are running -current then you may have to re-install perl5 to reflect the new /usr/lib/aout, otherwise the make of xvile with the optional PERL support could fail. I was forced to do this in the course of testing.
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@11259 aed309b6-a8cd-e111-996c-001c23d10e55

--- a/editors/xvile/Makefile
+++ b/editors/xvile/Makefile
@@ -1,15 +1,16 @@
 # New ports collection makefile for:    xvile
-# Version required:     7.3
+# Version required:     8.0
 # Date created:         Wed Nov 26, 1996
 # Whom:                 pgf
 #
-# $Id: Makefile,v 1.13 1997/09/06 19:58:03 gj Exp $
+# $Id: Makefile,v 1.14 1997/12/10 20:30:14 gj Exp $
 #
 
-DISTNAME=	vile-7.3
-PKGNAME=	xvile-7.3
+DISTNAME=	vile-8.0
+PKGNAME=	xvile-8.0
 CATEGORIES=	editors
 MASTER_SITES=	ftp://ftp.clark.net/pub/dickey/vile/ \
+		ftp://ftp.phred.org./pub/vile/ \
 		ftp://id.wing.net/pub/pgf/vile/
 EXTRACT_SUFX=	.tgz
 
@@ -17,12 +18,17 @@ MAINTAINER=	gj@freebsd.org
 
 MAKEFILE=	makefile
 GNU_CONFIGURE=	yes
-CONFIGURE_ARGS= --with-screen=${SCREEN_TYPE}
+CONFIGURE_ARGS= --with-screen=${SCREEN_TYPE} ${WITH_PERL}
 MAN1=		xvile.1
 NO_PATCH=	yes
 
 pre-configure:
+.if ! defined(USE_MENUS)
 	@echo "To use xvile with menus, set the environment variable USE_MENUS"
+.endif
+.if ! defined(USE_PERL)
+	@echo "To use xvile with PERL, set the environment variable USE_PERL"
+.endif
 
 .if defined(USE_MENUS)
 SCREEN_TYPE=	Xaw
@@ -30,11 +36,21 @@ SCREEN_TYPE=	Xaw
 SCREEN_TYPE=	x11
 .endif
 
-post-install:
-	@echo "You might want to copy the *.rc files from the source tree before"
-	@echo "doing \`make clean'."
-.if defined(USE_MENUS)
-	@echo "And also take a look at README.MENU !"
+.if defined(USE_PERL)
+WITH_PERL=	--with-perl
+PLIST=		${PKGDIR}/PLIST.perl
+BUILD_DEPENDS=	perl5:${PORTSDIR}/lang/perl5
 .endif
+
+post-install:
+.if !defined(NOPORTDOCS)
+	@if ! [ -d ${PREFIX}/share/doc/vile ]; then ${MKDIR} ${PREFIX}/share/doc/vile; fi
+	${INSTALL_DATA} ${WRKSRC}/doc/*.doc ${PREFIX}/share/doc/vile
+.endif
+	@if ! [ -d ${PREFIX}/share/vile/macros ]; then ${MKDIR} ${PREFIX}/share/vile/macros; fi
+	${INSTALL_DATA} ${WRKSRC}/macros/*.rc ${PREFIX}/share/vile/macros
+	${INSTALL_SCRIPT} ${WRKSRC}/macros/vile-pager ${PREFIX}/share/vile/macros
+	@echo "Look in ${PREFIX}/share/doc/vile for documentation."
+	@echo "Look in ${PREFIX}/share/vile/macros for macros."
 
 .include <bsd.port.mk>
