$Id$ -> $FreeBSD$ (spammed by dirk)
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@21616 aed309b6-a8cd-e111-996c-001c23d10e55

--- a/x11-toolkits/xbae/Makefile
+++ b/x11-toolkits/xbae/Makefile
@@ -5,7 +5,7 @@
 # With some
 # modifications from:	Andreas Klemm <andreas@FreeBSD.ORG>
 #
-# $Id: Makefile,v 1.6 1998/11/14 09:43:33 asami Exp $
+# $FreeBSD$
 #
 
 DISTNAME=	Xbae-4.7
