Fix latest build warning with ${DOCDIR}
Submitted by:	swills@


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@354230 35697150-7ecd-e111-bb59-0022644237b5

--- a/databases/adodb/Makefile
+++ b/databases/adodb/Makefile
@@ -55,7 +55,7 @@ do-install:
 
 post-install:
 .if ${PORT_OPTIONS:MDOCS}
-	@${MKDIR} ${DOCSDIR} ${STAGEDIR}${DOCSDIR}/cute_icons_for_site
+	@${MKDIR} ${STAGEDIR}${DOCSDIR} ${STAGEDIR}${DOCSDIR}/cute_icons_for_site
 	@cd ${WRKSRC}; ${FIND} . ! -path './*/*' -type f -name '*.txt' \
 		-exec ${INSTALL_MAN} ${WRKSRC}/{} ${STAGEDIR}${DOCSDIR}/{} \;
 	@cd ${WRKSRC}/docs; ${FIND} . -type f \
