Move to USES=libtool
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@354236 35697150-7ecd-e111-bb59-0022644237b5

--- a/net/xmlrpc-c/Makefile
+++ b/net/xmlrpc-c/Makefile
@@ -19,8 +19,7 @@ LIBWWW_DESC=	Compile with libwww support
 
 CONFLICTS=	xmlrpc-epi-0.* xmlrpc-c-devel-[0-9]*
 
-USES=		gmake perl5
-USE_AUTOTOOLS=	libtool:env
+USES=		gmake perl5 libtool
 GNU_CONFIGURE=	yes
 MAKEFILE=	GNUmakefile
 MAKE_ARGS=	LIBTOOL="${LIBTOOL}" \
