Add second MASTER_SITES to fix fetch.
Approved by:	cy (maintainer, implicit)
Sponsored by:	The FreeBSD Foundation


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@354239 35697150-7ecd-e111-bb59-0022644237b5

--- a/sysutils/cfengine36/Makefile
+++ b/sysutils/cfengine36/Makefile
@@ -4,7 +4,8 @@
 PORTNAME=	cfengine
 PORTVERSION=	3.6.0b1
 CATEGORIES=	sysutils
-MASTER_SITES=	http://cfengine.com/source-code/download?file=
+MASTER_SITES=	http://cfengine.com/source-code/download?file= \
+		https://s3.amazonaws.com/cfengine.package-repos/tarballs/
 
 MAINTAINER=	cy@FreeBSD.org
 #		gjb@FreeBSD.org is also committer for this port
